--- a/.github/workflows/run_update.yml
+++ b/.github/workflows/run_update.yml
@@ -24,6 +24,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        python update_repo_tables.py
+        python time.sleep(30)
         python updated_specs.py
     - name: Commit files
       id: commit
